# data-structures

./: .gitignore  Makefile  data-structures.org  flake.nix  lib.nix  todo.org
01/: LabPrinter.h  a.out  main.cpp
assignment/01/: Node.cpp  assn1Test.cpp  listPlay  listPlay.cpp  listPlay.h  main  make-run.sh  nodeTest
assignment/02/: assn2.cpp  assn2.h  assn2Test.cpp
assignment/03/: BST.cpp  BST.h  assn03Test.cpp  assn3  makefile
extra/: sort.cpp
lab/01/: CMakeLists.txt  Makefile
lab/03/: Makefile  week03Lab.cpp
lab/04/: CMakeLists.txt  Makefile
lab/04/files/: lab04Test.cpp  week04Lab.cpp  week04Lab.h
lab/04/src/: CMakeLists.txt  Makefile  lab04Test.cpp  week04Lab.cpp  week04Lab.h
lab/05/: Makefile  main.cpp  slowSortCompare.cpp  slowSortCompare.h  week05Lab.cpp
lab/06/: fastSortCompare.cpp  fastSortCompare.h  results  week06Lab.cpp
lab/08/: ArrayStack.cpp  ArrayStack.h  week08Lab.cpp
lab/09/: ArrayQueue.cpp  ArrayQueue.h  Makefile  lab6  week09Lab.cpp
lab/10/: HashTable.cpp  HashTable.h  Makefile  lab10  week10Lab.cpp
lab01/: Bag.cpp  Bag.h  Lab03  Makefile
lab03/: Bag.cpp  CMakeLists.txt  Lab03  Makefile  main.cpp
lab03/src/: A.cpp  A.h  CMakeLists.txt  Makefile  main.cpp  week03Lab.h
lib/: default.nix
notes/: 01.org  03.org  04.org  05.org  06.org  exam1.org  exam2.org  lecture.org  notes.org  schedule.org  week1.org  week2.org  week4.org  week5.org
zylab/01/: Makefile
zylab/02/: Searcher.h  make-run.sh  result
zylab/03/: NaturalMergeSorter.h
zylab/04/: SortedNumberList.h  main.cpp
zylab/05/: GroceryList.h  Makefile  (+2 more)
(+10 files in other folders)
